--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,18 +5,20 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    machine:
+      environment:
+        JAVA_HOME: /usr/lib/jvm/java-6-openjdk-amd64
     docker:
       - image: cimg/base:stable
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      - run:
-          name: "Run tests"
-          command: ./gradlew test
+    step:
+        name: Build And Test
+        script:
+          - bash ./gradlew clean build
+          - bash ./gradlew test
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
