--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,18 +5,15 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-    machine:
-      environment:
-        JAVA_HOME: /usr/lib/jvm/java-6-openjdk-amd64
     docker:
       - image: cimg/base:stable
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-    step:
+    run:
         name: Build And Test
-        script:
+        command:
           - bash ./gradlew clean build
           - bash ./gradlew test
 
