--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,9 +28,7 @@ jobs: # a collection of steps
       - run:
           name: Run tests in parallel # See: https://circleci.com/docs/2.0/parallelism-faster-jobs/
           # Use "./gradlew test" instead if tests are not run in parallel
-          command: |
-            cd src/test/java
-            ./gradlew test
+          command: ./gradlew test
       - save_cache:
           paths:
             - ~/.gradle/wrapper
