--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation 'org.jetbrains:annotations:20.1.0'
     implementation 'junit:junit:4.13.1'
 	implementation 'org.projectlombok:lombok:1.18.20'
+	implementation 'org.json:json:20171018'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
