Add jwt user auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 springdoc.api-docs.path=/v1/api
 springdoc.swagger-ui.path=/documentation.html
+spring.security.user.password=Test12345_
+jwt_secret="nachito"
