--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.hibernate.ddl-auto=create
 springdoc.api-docs.path=/v1/api
 springdoc.swagger-ui.path=/documentation.html
 spring.security.user.password=Test12345_
-jwt_secret="nachito"
+jwt_secret="mysecret"
